# nix-mac

./: .gitignore  README.md  flake.nix  home.nix  rust-toolchain.toml
crates/: Cargo.toml
crates/src/: main.rs
modules/: ai-tools.nix  ai.nix  chats.nix  command-line-productivity.nix  ide-dev-tools.nix  media.nix  rust-c-toolchain.nix  vm.nix  vscode.nix  zed-editor.nix
modules/ai/: default.nix  ollamaService.nix
modules/ai/models/mlx-community-gemma-4-26b-a4b-it-4bit-mlx/: modelfile.nix  weights.nix
modules/dev/: native-toolchain.nix  tools.nix  vscode.nix
